welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:13: error: ';' expected but ',' found.
Renvoyez la somme du jet de deux dés à six faces. Cependant, 
                                                           ^